[gd_scene load_steps=33 format=3 uid="uid://chtk44e0oxoly"]

[ext_resource type="Script" path="res://plyr.gd" id="1_ju0ca"]
[ext_resource type="Texture2D" uid="uid://cx2kx8r5ggc02" path="res://imgs/border_construct.png" id="2_l0dve"]
[ext_resource type="Texture2D" uid="uid://b2ar0x3yyw00q" path="res://imgs/plyr_0.png" id="3_de3j3"]
[ext_resource type="Texture2D" uid="uid://db2iajwq8287j" path="res://imgs/hud_item.png" id="6_3mron"]
[ext_resource type="Texture2D" uid="uid://bt7wyrywvm2fk" path="res://imgs/noBullet.png" id="6_7jipd"]
[ext_resource type="Texture2D" uid="uid://cebf6e2nbguxq" path="res://imgs/border.png" id="7_yilny"]
[ext_resource type="Texture2D" uid="uid://csaghg2v0ai18" path="res://imgs/pistol.png" id="8_3b8yw"]
[ext_resource type="Texture2D" uid="uid://cvxact573lrin" path="res://imgs/Icon.png" id="8_tosa0"]
[ext_resource type="Texture2D" uid="uid://drwaei8svgkiq" path="res://imgs/wood_drop.png" id="9_3docy"]
[ext_resource type="Texture2D" uid="uid://mq64qehx1j6i" path="res://imgs/hammer.png" id="9_yef4c"]
[ext_resource type="Texture2D" uid="uid://dmhanr4srwbj8" path="res://imgs/powerUp_cards.png" id="10_h2r2p"]
[ext_resource type="AudioStream" uid="uid://dsyf022eu8qsf" path="res://sounds/plyr_dmg.wav" id="11_4cfcn"]
[ext_resource type="AudioStream" uid="uid://cvi5o0qv2slj5" path="res://sounds/plyr_shoot.wav" id="12_k2a61"]
[ext_resource type="AudioStream" uid="uid://c3us2ixdsvrgc" path="res://sounds/no_ammo.wav" id="13_d4a0m"]
[ext_resource type="AudioStream" uid="uid://bl1mi66gn85oo" path="res://sounds/plyr_place.wav" id="14_o5yl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_famrr"]
bg_color = Color(0.121569, 0.0431373, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.243137, 0.0509804, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbbdp"]
bg_color = Color(1, 0.360784, 0.172549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.65098, 0.121569, 0.0588235, 1)
border_blend = true

[sub_resource type="CircleShape2D" id="CircleShape2D_4imq8"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fs5h"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_n6lka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ymqwn"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_qhntu"]
resource_name = "dmg"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CanvasItemMaterial_ymqwn"), null]
}

[sub_resource type="Animation" id="Animation_7foce"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_nxm2g"]
resource_name = "walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.1309, 0.0, 0.1309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5ssn"]
_data = {
"RESET": SubResource("Animation_n6lka"),
"dmg": SubResource("Animation_qhntu"),
"idle": SubResource("Animation_7foce"),
"walk": SubResource("Animation_nxm2g")
}

[sub_resource type="Animation" id="Animation_3vaib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/ham:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/gun:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_npwtt"]
resource_name = "item_use"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/ham:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, 0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/gun:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 1.25), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_k1ka6"]
resource_name = "reload"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/ham:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/gun:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_idwdm"]
_data = {
"RESET": SubResource("Animation_3vaib"),
"item_use": SubResource("Animation_npwtt"),
"reload": SubResource("Animation_k1ka6")
}

[sub_resource type="Animation" id="Animation_ejpwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7cj0g"]
resource_name = "shake_cam"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"shake_cam"
}, {
"args": [],
"method": &"shake_cam"
}, {
"args": [],
"method": &"shake_cam"
}, {
"args": [],
"method": &"shake_cam"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ixwt"]
_data = {
"RESET": SubResource("Animation_ejpwl"),
"shake_cam": SubResource("Animation_7cj0g")
}

[node name="Plyr" type="CharacterBody2D" groups=["plyr"]]
collision_mask = 11
script = ExtResource("1_ju0ca")

[node name="Ui" type="CanvasLayer" parent="."]

[node name="border" type="Sprite2D" parent="Ui"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(256, 144)
texture = ExtResource("7_yilny")

[node name="Fps" type="RichTextLabel" parent="Ui"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_right = 96.0
grow_vertical = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
text = "[b][color=green]FPS: 0[/color][/b]"
fit_content = true
scroll_active = false

[node name="HpBar" type="ProgressBar" parent="Ui"]
offset_top = 4.0
offset_right = 160.0
offset_bottom = 20.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxFlat_famrr")
theme_override_styles/fill = SubResource("StyleBoxFlat_nbbdp")
step = 0.1
value = 25.0
show_percentage = false

[node name="icon" type="Sprite2D" parent="Ui/HpBar"]
position = Vector2(10, 8.5)
scale = Vector2(1.75, 1.75)
texture = ExtResource("8_tosa0")

[node name="woods" type="RichTextLabel" parent="Ui"]
offset_top = 24.0
offset_right = 72.0
offset_bottom = 48.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "       x20"

[node name="icon" type="Sprite2D" parent="Ui/woods"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_3docy")
offset = Vector2(8, 6)

[node name="score" type="Label" parent="Ui"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -202.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_constants/outline_size = 8
text = "Score: 0"
horizontal_alignment = 2

[node name="Card1" type="Sprite2D" parent="Ui"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(420, 270)
rotation = -0.261799
scale = Vector2(2, 2)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="Card2" type="Sprite2D" parent="Ui"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(452, 260)
scale = Vector2(2, 2)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="Card3" type="Sprite2D" parent="Ui"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(484, 270)
rotation = 0.261799
scale = Vector2(2, 2)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="PowerUpMenu" type="Control" parent="Ui"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PowerUp1" type="Button" parent="Ui/PowerUpMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -96.0
offset_right = -102.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
text = ".
.
.
.
.
-----------------
Power up name"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="card" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp1"]
position = Vector2(48, 64)
scale = Vector2(4, 4)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="subcard" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp1"]
visible = false
position = Vector2(96, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3
frame = 14

[node name="PowerUp2" type="Button" parent="Ui/PowerUpMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -96.0
offset_right = 48.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
text = ".
.
.
.
.
-----------------
Power up name"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="card" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp2"]
position = Vector2(48, 64)
scale = Vector2(4, 4)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="subcard" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp2"]
visible = false
position = Vector2(96, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3
frame = 14

[node name="PowerUp3" type="Button" parent="Ui/PowerUpMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 102.0
offset_top = -96.0
offset_right = 198.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
text = ".
.
.
.
.
-----------------
Power up name"
text_overrun_behavior = 2
autowrap_mode = 2

[node name="card" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp3"]
position = Vector2(48, 64)
scale = Vector2(4, 4)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3

[node name="subcard" type="Sprite2D" parent="Ui/PowerUpMenu/PowerUp3"]
visible = false
position = Vector2(96, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_h2r2p")
hframes = 5
vframes = 3
frame = 12

[node name="Info" type="Label" parent="Ui/PowerUpMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -48.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
text = "Info what this does"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cancel" type="Button" parent="Ui/PowerUpMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -37.0
offset_right = 69.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Cancel [-25 pts]"

[node name="tool" type="Sprite2D" parent="Ui"]
position = Vector2(168, 12)
texture = ExtResource("6_3mron")
hframes = 2
frame = 1

[node name="construct_area" type="Area2D" parent="." groups=["plyr"]]

[node name="border" type="Sprite2D" parent="construct_area"]
modulate = Color(1, 1, 1, 0.482353)
texture = ExtResource("2_l0dve")

[node name="area" type="CollisionShape2D" parent="construct_area"]
shape = SubResource("CircleShape2D_4imq8")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_de3j3")

[node name="gun" type="Sprite2D" parent="Sprite"]
texture = ExtResource("8_3b8yw")

[node name="aim" type="Node2D" parent="Sprite/gun"]
position = Vector2(8, 0)

[node name="aim_shotgun1" type="Node2D" parent="Sprite/gun"]
position = Vector2(12, -1)
rotation = -0.174533

[node name="aim_shotgun2" type="Node2D" parent="Sprite/gun"]
position = Vector2(12, 0)

[node name="aim_shotgun3" type="Node2D" parent="Sprite/gun"]
position = Vector2(12, 1)
rotation = 0.174533

[node name="smooth" type="CPUParticles2D" parent="Sprite/gun"]
position = Vector2(8, 0)
emitting = false
amount = 3
lifetime = 2.5
one_shot = true
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.75
gravity = Vector2(0, -5)
initial_velocity_max = 15.0
orbit_velocity_min = -2.5
orbit_velocity_max = 2.5
scale_amount_min = 0.25
scale_amount_max = 1.5

[node name="ham" type="Sprite2D" parent="Sprite"]
visible = false
texture = ExtResource("9_yef4c")

[node name="NoBullet" type="CPUParticles2D" parent="Sprite"]
position = Vector2(0, -16)
emitting = false
amount = 1
lifetime = 0.75
one_shot = true
texture = ExtResource("6_7jipd")
gravity = Vector2(0, -32)
scale_amount_min = 0.9
scale_amount_max = 1.1
color = Color(1, 0.470588, 0.470588, 1)

[node name="col" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_5fs5h")

[node name="cam" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="dmg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_4cfcn")

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_k2a61")

[node name="no_ammo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_d4a0m")

[node name="place" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_o5yl0")

[node name="particle" type="CPUParticles2D" parent="."]
position = Vector2(0, 7)
emitting = false
amount = 6
randomness = 0.5
lifetime_randomness = 0.75
emission_shape = 3
emission_rect_extents = Vector2(6, 1)
spread = 90.0
gravity = Vector2(0, 2)
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 0.5
scale_amount_max = 2.5
color = Color(0.814678, 0.814679, 0.814679, 1)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e5ssn")
}

[node name="item" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_idwdm")
}

[node name="lava_dmg_timer" type="Timer" parent="."]
one_shot = true

[node name="camera" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ixwt")
}

[connection signal="mouse_entered" from="Ui/PowerUpMenu/PowerUp1" to="." method="_on_power_up_1_mouse_entered"]
[connection signal="mouse_exited" from="Ui/PowerUpMenu/PowerUp1" to="." method="exited"]
[connection signal="pressed" from="Ui/PowerUpMenu/PowerUp1" to="." method="_on_power_up_1_pressed"]
[connection signal="mouse_entered" from="Ui/PowerUpMenu/PowerUp2" to="." method="_on_power_up_2_mouse_entered"]
[connection signal="mouse_exited" from="Ui/PowerUpMenu/PowerUp2" to="." method="exited"]
[connection signal="pressed" from="Ui/PowerUpMenu/PowerUp2" to="." method="_on_power_up_2_pressed"]
[connection signal="mouse_entered" from="Ui/PowerUpMenu/PowerUp3" to="." method="_on_power_up_3_mouse_entered"]
[connection signal="mouse_exited" from="Ui/PowerUpMenu/PowerUp3" to="." method="exited"]
[connection signal="pressed" from="Ui/PowerUpMenu/PowerUp3" to="." method="_on_power_up_3_pressed"]
[connection signal="pressed" from="Ui/PowerUpMenu/cancel" to="." method="_on_cancel_pressed"]
[connection signal="mouse_entered" from="construct_area" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="construct_area" to="." method="mouse_exited"]
[connection signal="timeout" from="lava_dmg_timer" to="." method="_on_lava_dmg_timer_timeout"]
